# codex-training

./: .gitignore  README.md  package-lock.json  package.json  slides.md
.claude/: settings.local.json
config-examples/: advanced-config.toml
exercises/: README.md  SETUP.md
exercises/java-spring-boot/: AGENTS.md  README.md
exercises/microservices/: AGENTS.md  README.md  docker-compose.yml
exercises/python-refactoring/: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  legacy_code.py  pyproject.toml  requirements.txt  sample_data.csv
exercises/python-refactoring/docs/: conf.py  index.rst  usage.rst
exercises/python-refactoring/src/calculator/: calculator.py  operations.py  validators.py
exercises/python-refactoring/src/data_processing/: models.py  numeric.py  processors.py  readers.py  service.py  writers.py
exercises/python-refactoring/src/exceptions/: custom.py
exercises/python-refactoring/src/temperature/: converter.py
exercises/python-refactoring/src/ui/: __init__.py  calculator_app.py
exercises/python-refactoring/src/utils/: logging.py  validators.py
exercises/python-refactoring/tests/: conftest.py
exercises/python-refactoring/tests/integration/: test_pipeline.py
exercises/python-refactoring/tests/property/: test_hypothesis.py
exercises/python-refactoring/tests/unit/: test_calculator.py  test_converter.py  test_processors.py  test_ui.py  test_validators.py
exercises/react-forms/: AGENTS.md  (+6 more)
prompts/: README.md  api-upgrade.md  perf-fix.md  pr-review.md  refactor.md  security-audit.md  test-gen.md
scripts/: review-file.sh
(+67 files in other folders)
